# seamless_cloning

./: CMakeLists.txt  README.md
src/: main.cpp  seamless_cloning.cpp  seamless_cloning.hpp
